# machine-learning-deployment

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml  readme.MD  requirements.txt
.github/workflows/: python_build.yml
.k8s/: backend-configmap.yml  backend-deployment.yml  backend-service.yml  backend.yml  mlflow-configmap.yml  mlflow.yaml  streamlit-configmap.yml  streamlit-deployment.yml  streamlit-service.yml  streamlit.yml
app/: main.py
app/auth/: dependencies.py
app/databases/: mongodb.py
app/handling_exception/: hd.py
app/models/: inference_data.py  user_registry.py
app/routers/: create.py  delete.py  inference.py  mlflow_get_model.py  mlflow_registry_alias.py  mlflow_registry_tags.py  training.py
app/scripts_of_inference/: sklearn_inference.py
app/scripts_of_training/: optuna_objective.py  optuna_run.py
mlflow/: Dockerfile  docker-compose.yml
streamlit/: Dockerfile  docker-compose.yml  setup.py  web.py
streamlit/mycommand/: cli.py
test/: endpoints.py
