[tool.poetry]
name = "machine-learning-deployment"
version = "0.1.0"
description = ""
authors = ["Wallis16 <diogeneswallis@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
optuna = "^3.6.1"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
mlflow = "^2.14.3"
bson = "^0.5.10"
pymongo = "^4.8.0"
streamlit = "^1.36.0"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
